fix: Balance sidebar whitespace on narrow viewport

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -82,6 +82,12 @@ main {
 }
 
 body > .with-aside {
+  @media screen and (max-width: $bigscreenBreakpoint) {
+    main {
+      margin-bottom: 3em;
+    }
+  }
+
   aside {
     ul, li {
       margin: 0;
